--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update GitHub Readme Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs once every day at midnight UTC
+    - cron: "0 0 * * *" # Runs once every 24 hours at midnight UTC
   workflow_dispatch: # Allows manual trigger
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Update README Stats
+      - name: Fetch Latest README
         run: curl -X GET "https://github-readme-stats.vercel.app/api/top-langs/?username=Drago-03&theme=tokyonight&hide_border=true&include_all_commits=true&count_private=true&layout=compact&border_radius=10&card_width=500"
 
       - name: Commit and Push Changes
