--- a/.github/workflows/Waka-readme.yml
+++ b/.github/workflows/Waka-readme.yml
@@ -22,7 +22,8 @@ jobs:
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_LANGUAGE: "True"
           SHOW_TIMEZONE: "True"
-          SHOW_EDITORS: "True"
-          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_EDITORS: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "True"
           SHOW_LOC_CHART: "True"
+          SECTION_NAME: "Profile Readme Development Stats"
