--- a/.github/workflows/Profile Readme Development Stats.yml
+++ b/.github/workflows/Profile Readme Development Stats.yml
@@ -1,4 +1,4 @@
-name: waka readme
+name: Waka Readme
 
 on:
   schedule:
@@ -7,13 +7,14 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SECTION_NAME: "waka"
           SHOW_OS: "True"
           SHOW_PROJECTS: "True"
           SHOW_LINES_OF_CODE: "True"
@@ -22,7 +23,11 @@ jobs:
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_LANGUAGE: "True"
           SHOW_TIMEZONE: "True"
-          SHOW_EDITORS: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_EDITORS: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
           SHOW_SHORT_INFO: "True"
           SHOW_LOC_CHART: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_UPDATED_DATE: "True"
+          COMMIT_MESSAGE: "🔥 Updated with fire Waka Stats"
+          LOCALE: "en"
