--- a/.github/workflows/Profile Readme Development Stats.yml
+++ b/.github/workflows/Profile Readme Development Stats.yml
@@ -23,7 +23,7 @@ jobs:
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_LANGUAGE: "True"
           SHOW_TIMEZONE: "True"
-          SHOW_EDITORS: "True"
+          SHOW_EDITORS: "False"
           SHOW_LANGUAGE_PER_REPO: "True"
           SHOW_SHORT_INFO: "True"
           SHOW_LOC_CHART: "True"
