--- a/.github/workflows/Profile Readme Development Stats.yml
+++ b/.github/workflows/Profile Readme Development Stats.yml
@@ -15,17 +15,17 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SECTION_NAME: "waka"
-          SHOW_OS: "True"
-          SHOW_PROJECTS: "True"
+          SHOW_OS: "FALSE"
+          SHOW_PROJECTS: "FALSE"
           SHOW_LINES_OF_CODE: "True"
-          SHOW_PROFILE_VIEWS: "True"
+          SHOW_PROFILE_VIEWS: "FALSE"
           SHOW_COMMIT: "True"
-          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_DAYS_OF_WEEK: "TRUE"
           SHOW_LANGUAGE: "True"
           SHOW_TIMEZONE: "True"
           SHOW_EDITORS: "False"
-          SHOW_LANGUAGE_PER_REPO: "True"
-          SHOW_SHORT_INFO: "True"
+          SHOW_LANGUAGE_PER_REPO: "FALSE"
+          SHOW_SHORT_INFO: "FALSE"
           SHOW_LOC_CHART: "True"
           SHOW_TOTAL_CODE_TIME: "True"
           SHOW_UPDATED_DATE: "True"
